Updating openssl version

--- a/rudder-agent/other/scripts/Makefile.cfengine
+++ b/rudder-agent/other/scripts/Makefile.cfengine
@@ -20,7 +20,7 @@
 
 CFENGINE_RELEASE = 3.6.0
 PCRE_RELEASE = 8.35
-OPENSSL_RELEASE = 1.0.1g
+OPENSSL_RELEASE = 1.0.1h
 ZLIB_RELEASE = 1.2.8
 BZIP2_RELEASE = 1.0.6
 LIBXML2_RELEASE = 2.9.1
