--- a/rudder-agent/other/scripts/Makefile.cfengine
+++ b/rudder-agent/other/scripts/Makefile.cfengine
@@ -18,7 +18,7 @@
 
 .DEFAULT_GOAL := localdepends
 
-CFENGINE_RELEASE = 3.6.0
+CFENGINE_RELEASE = 3.6.1
 PCRE_RELEASE = 8.35
 OPENSSL_RELEASE = 1.0.1h
 ZLIB_RELEASE = 1.2.8
@@ -42,7 +42,8 @@ $(BUILD_DIR):
 $(BUILD_DIR)/cfengine-source:
 	# Original URL: http://cfengine.com/source-code/download?file=cfengine-$(CFENGINE_RELEASE).tar.gz
 	#$(WGET) -O $(TMP_DIR)/cfengine.tgz http://www.normation.com/tarball/cfengine-$(CFENGINE_RELEASE).tar.gz
-	$(WGET) -O $(TMP_DIR)/cfengine.tgz http://s3.amazonaws.com/cfengine.package-repos/tarballs/cfengine-$(CFENGINE_RELEASE).tar.gz
+	#$(WGET) -O $(TMP_DIR)/cfengine.tgz http://s3.amazonaws.com/cfengine.package-repos/tarballs/cfengine-$(CFENGINE_RELEASE).tar.gz
+	$(WGET) -O $(TMP_DIR)/cfengine.tgz http://cfengineers.net/files/src/cfengine-$(CFENGINE_RELEASE).tar.gz
 	$(TAR) xzf $(TMP_DIR)/cfengine.tgz -C $(TMP_DIR)
 	mv $(TMP_DIR)/cfengine-$(CFENGINE_RELEASE) $(BUILD_DIR)/cfengine-source
 
