--- a/rudder-agent/other/scripts/Makefile.cfengine
+++ b/rudder-agent/other/scripts/Makefile.cfengine
@@ -18,14 +18,14 @@
 
 .DEFAULT_GOAL := localdepends
 
-CFENGINE_RELEASE = 3.6.1
-PCRE_RELEASE = 8.35
-OPENSSL_RELEASE = 1.0.1h
+CFENGINE_RELEASE = 3.6.2
+PCRE_RELEASE = 8.36
+OPENSSL_RELEASE = 1.0.1i
 ZLIB_RELEASE = 1.2.8
 BZIP2_RELEASE = 1.0.6
 LIBXML2_RELEASE = 2.9.1
 LIBICONV_RELEASE = 1.14
-OPENLDAP_RELEASE = 2.4.39
+OPENLDAP_RELEASE = 2.4.40
 BUILD_DIR = ../build
 TMP_DIR := $(shell mktemp -dq /tmp/rudder.XXXXXX)
 WGET := $(if $(PROXY), http_proxy=$(PROXY) ftp_proxy=$(PROXY)) /usr/sfw/bin/wget -q
