Changes for v3.6.4 Solaris 10

--- a/rudder-agent/other/scripts/Makefile.cfengine
+++ b/rudder-agent/other/scripts/Makefile.cfengine
@@ -18,10 +18,10 @@
 
 .DEFAULT_GOAL := localdepends
 
-CFENGINE_RELEASE = 3.6.3
+CFENGINE_RELEASE = 3.6.4
 PCRE_RELEASE = 8.36
 #OPENSSL_RELEASE = 1.0.1i
-OPENSSL_RELEASE = 0.9.8zc
+OPENSSL_RELEASE = 0.9.8ze
 ZLIB_RELEASE = 1.2.8
 BZIP2_RELEASE = 1.0.6
 LIBXML2_RELEASE = 2.9.2
