Making cf-elk changes for CFEngine 3.7

--- a/rudder-agent/other/scripts/Makefile.cf-elk
+++ b/rudder-agent/other/scripts/Makefile.cf-elk
@@ -18,18 +18,18 @@
 
 .DEFAULT_GOAL := localdepends
 
-CFENGINE_RELEASE = 3.6.4
-PCRE_RELEASE = 8.36
-#OPENSSL_RELEASE = 1.0.1i
-OPENSSL_RELEASE = 0.9.8ze
+CFENGINE_RELEASE = 3.7.0
+PCRE_RELEASE = 8.37
+OPENSSL_RELEASE = 0.9.8zg
 ZLIB_RELEASE = 1.2.8
 BZIP2_RELEASE = 1.0.6
 LIBXML2_RELEASE = 2.9.2
 LIBICONV_RELEASE = 1.14
 OPENLDAP_RELEASE = 2.4.40
+YAML_RELEASE = 0.1.5
 LIBUUID_RELEASE = 1.0.3
 EXPAT_RELEASE = 2.1.0
-APR_RELEASE = 1.5.1
+APR_RELEASE = 1.5.2
 NXLOG_RELEASE = 2.8.1248
 BUILD_DIR = ../build
 TMP_DIR := $(shell mktemp -dq /tmp/rudder.XXXXXX)
@@ -38,7 +38,7 @@ PATCH = /usr/bin/gpatch
 FIND = /opt/csw/bin/gfind
 TAR = /opt/csw/bin/gtar
 
-localdepends: $(BUILD_DIR) $(BUILD_DIR)/zlib-source $(BUILD_DIR)/bzip2-source $(BUILD_DIR)/openldap-source $(BUILD_DIR)/pcre-source $(BUILD_DIR)/openssl-source $(BUILD_DIR)/cfengine-source $(BUILD_DIR)/libxml2-source $(BUILD_DIR)/libiconv-source $(BUILD_DIR)/libuuid-source $(BUILD_DIR)/expat-source $(BUILD_DIR)/apr-source $(BUILD_DIR)/nxlog-source
+localdepends: $(BUILD_DIR) $(BUILD_DIR)/zlib-source $(BUILD_DIR)/bzip2-source $(BUILD_DIR)/openldap-source $(BUILD_DIR)/pcre-source $(BUILD_DIR)/openssl-source $(BUILD_DIR)/cfengine-source $(BUILD_DIR)/libxml2-source $(BUILD_DIR)/libiconv-source $(BUILD_DIR)/libuuid-source $(BUILD_DIR)/expat-source $(BUILD_DIR)/apr-source $(BUILD_DIR)/nxlog-source $(BUILD_DIR)/yaml-source
 	rm -rf $(TMP_DIR)
 
 $(BUILD_DIR):
@@ -47,8 +47,9 @@ $(BUILD_DIR):
 $(BUILD_DIR)/cfengine-source:
 	# Original URL: http://cfengine.com/source-code/download?file=cfengine-$(CFENGINE_RELEASE).tar.gz
 	#$(WGET) -O $(TMP_DIR)/cfengine.tgz http://www.normation.com/tarball/cfengine-$(CFENGINE_RELEASE).tar.gz
-	$(WGET) -O $(TMP_DIR)/cfengine.tgz http://s3.amazonaws.com/cfengine.package-repos/tarballs/cfengine-$(CFENGINE_RELEASE).tar.gz
+	#$(WGET) -O $(TMP_DIR)/cfengine.tgz http://s3.amazonaws.com/cfengine.package-repos/tarballs/cfengine-$(CFENGINE_RELEASE).tar.gz
 	#$(WGET) -O $(TMP_DIR)/cfengine.tgz http://cfengineers.net/files/src/cfengine-$(CFENGINE_RELEASE).tar.gz
+	$(WGET) -O $(TMP_DIR)/cfengine.tgz http://cfengineers.net/files/src/cfengine-$(CFENGINE_RELEASE).tar.gz
 	$(TAR) xzf $(TMP_DIR)/cfengine.tgz -C $(TMP_DIR)
 	mv $(TMP_DIR)/cfengine-$(CFENGINE_RELEASE) $(BUILD_DIR)/cfengine-source
 
@@ -112,6 +113,11 @@ $(BUILD_DIR)/nxlog-source:
 	$(WGET) -O $(TMP_DIR)/nxlog.tgz http://nxlog.org/system/files/products/files/1/nxlog-ce-$(NXLOG_RELEASE).tar.gz
 	$(TAR) xzf $(TMP_DIR)/nxlog.tgz -C $(TMP_DIR)
 	mv $(TMP_DIR)/nxlog-ce-$(NXLOG_RELEASE) $(BUILD_DIR)/nxlog-ce-source
+
+$(BUILD_DIR)/yaml-source:
+	$(WGET) -O $(TMP_DIR)/yaml.tgz http://pyyaml.org/download/libyaml/yaml-$(YAML_RELEASE).tar.gz
+	$(TAR) xzf $(TMP_DIR)/yaml.tgz -C $(TMP_DIR)
+	mv $(TMP_DIR)/yaml-$(YAML_RELEASE) $(BUILD_DIR)/yaml-source
 
 veryclean:
 	rm -rf $(BUILD_DIR)/rudder-sources.tar.bz2
