Adding changes for CFEngine 3.7.1

--- a/rudder-agent/other/scripts/Makefile.cfengine
+++ b/rudder-agent/other/scripts/Makefile.cfengine
@@ -19,9 +19,8 @@
 
 .DEFAULT_GOAL := localdepends
 
-CFENGINE_RELEASE = 3.7.0
+CFENGINE_RELEASE = 3.7.1
 PCRE_RELEASE = 8.37
-#OPENSSL_RELEASE = 1.0.1i
 OPENSSL_RELEASE = 0.9.8zg
 ZLIB_RELEASE = 1.2.8
 BZIP2_RELEASE = 1.0.6
@@ -46,8 +45,9 @@ $(BUILD_DIR)/cfengine-source:
 	# Original URL: http://cfengine.com/source-code/download?file=cfengine-$(CFENGINE_RELEASE).tar.gz
 	#$(WGET) -O $(TMP_DIR)/cfengine.tgz http://www.normation.com/tarball/cfengine-$(CFENGINE_RELEASE).tar.gz
 	#$(WGET) -O $(TMP_DIR)/cfengine.tgz http://s3.amazonaws.com/cfengine.package-repos/tarballs/cfengine-$(CFENGINE_RELEASE).tar.gz
-	#$(WGET) --no-check-certificate -O $(TMP_DIR)/cfengine.tgz https://cfengine-package-repos.s3.amazonaws.com/tarballs/cfengine-$(CFENGINE_RELEASE).tar.gz
-	$(WGET) -O $(TMP_DIR)/cfengine.tgz http://cfengineers.net/files/src/cfengine-$(CFENGINE_RELEASE).tar.gz
+	$(WGET) --no-check-certificate -O $(TMP_DIR)/cfengine.tgz https://s3.amazonaws.com/cfengine-package-repos/tarballs/cfengine-$(CFENGINE_RELEASE).tar.gz
+	#https://s3.amazonaws.com/cfengine-package-repos/tarballs/cfengine-3.7.1.tar.gz
+	#$(WGET) -O $(TMP_DIR)/cfengine.tgz http://cfengineers.net/files/src/cfengine-$(CFENGINE_RELEASE).tar.gz
 	$(TAR) xzf $(TMP_DIR)/cfengine.tgz -C $(TMP_DIR)
 	mv $(TMP_DIR)/cfengine-$(CFENGINE_RELEASE) $(BUILD_DIR)/cfengine-source
 
