Revert "Making changes for 3.7.2"
This reverts commit f33f6b1cf34e4e4b8c7127dfc0146e4c8563b022.

--- a/rudder-agent/other/scripts/Makefile.cfengine
+++ b/rudder-agent/other/scripts/Makefile.cfengine
@@ -19,14 +19,14 @@
 
 .DEFAULT_GOAL := localdepends
 
-CFENGINE_RELEASE = 3.7.2
+CFENGINE_RELEASE = 3.7.1
 PCRE_RELEASE = 8.37
-OPENSSL_RELEASE = 0.9.8zh
+OPENSSL_RELEASE = 0.9.8zg
 ZLIB_RELEASE = 1.2.8
 BZIP2_RELEASE = 1.0.6
 LIBXML2_RELEASE = 2.9.2
 LIBICONV_RELEASE = 1.14
-OPENLDAP_RELEASE = 2.4.43
+OPENLDAP_RELEASE = 2.4.40
 YAML_RELEASE = 0.1.5
 BUILD_DIR = ../build
 TMP_DIR := $(shell mktemp -dq /tmp/rudder.XXXXXX)
