--- a/rudder-agent/other/scripts/Makefile.cfengine
+++ b/rudder-agent/other/scripts/Makefile.cfengine
@@ -19,9 +19,9 @@
 
 .DEFAULT_GOAL := localdepends
 
-CFENGINE_RELEASE = 3.7.1
+CFENGINE_RELEASE = 3.7.2
 PCRE_RELEASE = 8.37
-OPENSSL_RELEASE = 0.9.8zg
+OPENSSL_RELEASE = 0.9.8zh
 ZLIB_RELEASE = 1.2.8
 BZIP2_RELEASE = 1.0.6
 LIBXML2_RELEASE = 2.9.2
